[package]
name = "radula"
version = "1.1.5"
authors = ["Firas Khalil Khana <firasuke@glaucuslinux.org>"]
edition = "2021"
description = "glaucus's radula"
readme = "README.md"
repository = "https://github.com/glaucuslinux/radula"
license = "ISC"
keywords = ["glaucus", "radula"]

[dependencies]
bzip2 = { version = "0.4.3", features = ["tokio"] }
chrono = "0.4.19"
colored = "2.0.0"
flate2 = { version = "1.0.24", default-features = false, features = [
    "zlib-ng-compat",
] }
futures-util = "0.3.21"
git2 = { version = "0.14.4", features = ["zlib-ng-compat"] }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = [
    "improved_unicode",
] }
num_cpus = "1.13.1"
reqwest = { version = "0.11.11", features = ["stream"] }
serde = { version = "1.0.139", features = ["derive"] }
tar = "0.4.38"
tokio = { version = "1.19.2", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
] }
toml = { version = "0.5.9", features = ["preserve_order"] }
walkdir = "2.3.2"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
xz2 = { git = "https://github.com/alexcrichton/xz2-rs", features = ["tokio"] }
zstd = { version = "0.11.2+zstd.1.5.2", default-features = false, features = ["zstdmt"] }

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false
codegen-units = 1
