[package]
name = "radula"
version = "1.2.0"
authors = ["Firas Khalil Khana <firasuke@glaucuslinux.org>"]
edition = "2021"
description = "glaucus's radula"
readme = "README.md"
repository = "https://github.com/glaucuslinux/radula"
license = "ISC"
keywords = ["glaucus", "radula"]

[dependencies]
bzip2 = { version = "0.4.3", features = ["tokio"] }
chrono = "0.4.23"
colored = "2.0.0"
flate2 = { version = "1.0.25", default-features = false, features = [
    "zlib-ng-compat",
] }
futures-util = "0.3.25"
git2 = { version = "0.16.0", features = ["zlib-ng-compat"] }
indicatif = { git = "https://github.com/mitsuhiko/indicatif", features = [
    "improved_unicode",
] }
num_cpus = "1.15.0"
reqwest = { version = "0.11.13", features = ["stream"] }
serde = { version = "1.0.152", features = ["derive"] }
tar = "0.4.38"
tokio = { version = "1.24.1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
] }
toml = { version = "0.5.10", features = ["preserve_order"] }
walkdir = "2.3.2"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
xz2 = { git = "https://github.com/alexcrichton/xz2-rs", features = ["tokio"] }
zstd = { version = "0.12.2+zstd.1.5.2", default-features = false, features = [
    "zstdmt",
] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
incremental = false
codegen-units = 1
